gallery select test

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,6 +71,8 @@
             android:textSize="@dimen/_13sdp"
             android:paddingHorizontal="@dimen/_8sdp"
             android:paddingVertical="@dimen/_12sdp"
+            android:id="@+id/camera_button"
+            android:background="?attr/selectableItemBackground"
             />
 
         <View
@@ -88,6 +90,8 @@
             android:textColor="@color/colorPrimaryDark"
             android:paddingHorizontal="@dimen/_8sdp"
             android:paddingVertical="@dimen/_12sdp"
+            android:id="@+id/gallery_button"
+            android:background="?attr/selectableItemBackground"
             />
 
 
